syntax = "proto3";

package kvstore.server.v1;

option go_package = "github.com/gc-plazas/kv-store/go/external/server";

service ServerService {
  rpc GetValue(GetValueRequest) returns(GetValueResponse);
  rpc PutValue(PutValueRequest) returns(PutValueResponse);
}

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string value = 1;
}

message PutValueRequest {
  string key = 1;
  string value = 2;
}

message PutValueResponse {
  bool success = 1;
}
